# osia

./: .gitignore  CMakeLists.txt  LICENCE  README.md  build.bat
include/osia/: config.hpp
lib/: glfw3.lib
src/: main.cpp
src/core/: application.cpp  application.hpp
src/core/render/: window.cpp  window.hpp
